fixed issue with text-container overflowing mobile version -germany p1

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -439,7 +439,6 @@ font-weight: var(--fw-extralight);
   display:flex;
   flex-direction: column;
   padding-block-end: 20rem;
-  overflow-x: hidden;
 }
 
 
@@ -448,6 +447,8 @@ font-weight: var(--fw-extralight);
  position:relative;
  padding: .3rem 0.5rem;
  margin-block-start: 1rem;
+ max-width: 100vw;
+ 
 }
 
 .about__germany .txt-wrp-title{
@@ -799,8 +800,6 @@ z-index:3;
    /*  margin-top: calc(8%); */
   }
 
-  
-
   .pic__harmonica{
     grid-column:3/4;
     grid-row:2/5;
@@ -837,8 +836,6 @@ z-index:3;
   }
 
 
-
-
   /*footstep position -RES3 - pair 1*/
   .txt--journey>.img__footstep:nth-child(2) {
     grid-column: 3/4;
@@ -862,7 +859,6 @@ z-index:3;
     grid-row: 3/5;
     margin-block-start:5rem;
     transform: rotate(-15deg);
-  
   }
   
   .txt--journey>.img__footstep:nth-child(6) {
@@ -955,7 +951,12 @@ z-index:3;
     line-height: 2.7rem;
   } 
 
-
+/*  .img__china img {
+   width: 30vw;
+   background-color: yellow;
+   position: relative;
+   bottom: 0;
+ } */
 
  /*germany p1*/
  .about__germany .txt-wrp-title{
